[gd_scene load_steps=12 format=3 uid="uid://cstmar211pvqk"]

[ext_resource type="Script" uid="uid://llemomb5pi56" path="res://scripts/Game.gd" id="1_dlrd2"]
[ext_resource type="Script" uid="uid://bbjvrv5w5u77c" path="res://scripts/Story.gd" id="2_eu8vd"]
[ext_resource type="VideoStream" uid="uid://cir1bv11xeoly" path="res://art/intro/davinci.ogv" id="2_j5wjh"]
[ext_resource type="Script" uid="uid://bawlq1cobpif7" path="res://scripts/ui/NarrationDialog.gd" id="3_do1k0"]
[ext_resource type="Script" uid="uid://b0iwjmbfru0u4" path="res://scripts/intro_video.gd" id="3_vef74"]
[ext_resource type="VideoStream" uid="uid://chq5w4vvobuje" path="res://art/intro/davinci_loop.ogv" id="4_hve3p"]
[ext_resource type="Script" uid="uid://bwiuiomqoeg54" path="res://scripts/ui/StatusBar.gd" id="4_ryrav"]
[ext_resource type="Script" uid="uid://deidpbpa7sqkq" path="res://scripts/ui/ChoicesDialog.gd" id="4_um3na"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un0en"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_717vj"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0j8i"]

[node name="Game" type="Node"]
script = ExtResource("1_dlrd2")

[node name="Title Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game Prompt" type="Label" parent="Title Screen"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.5
offset_top = -109.0
offset_right = 166.5
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Press Any Key to Start"

[node name="IntroVideo" type="VideoStreamPlayer" parent="Title Screen"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1078.0
stream = ExtResource("2_j5wjh")
autoplay = true
script = ExtResource("3_vef74")
first_video = ExtResource("2_j5wjh")
loop_video = ExtResource("4_hve3p")

[node name="Story Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_eu8vd")

[node name="Status Bar" type="PanelContainer" parent="Story Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 60.0
grow_horizontal = 2
script = ExtResource("4_ryrav")

[node name="MarginContainer" type="MarginContainer" parent="Story Screen/Status Bar"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Story Screen/Status Bar/MarginContainer"]
layout_mode = 2

[node name="MentalHealthLabel" type="Label" parent="Story Screen/Status Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "HP: "

[node name="StrengthLabel" type="Label" parent="Story Screen/Status Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "STR: "

[node name="MoneyLabel" type="Label" parent="Story Screen/Status Bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "$: "

[node name="Narration Dialog" type="PanelContainer" parent="Story Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -743.0
offset_top = -427.0
offset_right = 744.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_do1k0")

[node name="MarginContainer" type="MarginContainer" parent="Story Screen/Narration Dialog"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Story Screen/Narration Dialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Story Screen/Narration Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "lorem ipsum dolor sit amet"
autowrap_mode = 2

[node name="Advance Button" type="Button" parent="Story Screen/Narration Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = ">"

[node name="Text Display Timer" type="Timer" parent="Story Screen/Narration Dialog"]
wait_time = 0.05

[node name="Choices Dialog" type="PanelContainer" parent="Story Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -543.5
offset_top = 820.0
offset_right = 543.5
offset_bottom = 905.0
grow_horizontal = 2
script = ExtResource("4_um3na")

[node name="MarginContainer" type="MarginContainer" parent="Story Screen/Choices Dialog"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Choices" type="VBoxContainer" parent="Story Screen/Choices Dialog/MarginContainer"]
layout_mode = 2

[node name="Choice Button" type="Button" parent="Story Screen/Choices Dialog/MarginContainer/Choices"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_un0en")
theme_override_styles/pressed = SubResource("StyleBoxFlat_717vj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_q0j8i")
text = "Choice"
alignment = 0

[connection signal="END_OF_DAY" from="Story Screen" to="." method="_on_end_of_day"]
[connection signal="END_OF_STORY" from="Story Screen" to="." method="_on_end_of_story"]
[connection signal="ADVANCE_BEAT" from="Story Screen/Narration Dialog" to="Story Screen" method="_on_advance_beat"]
[connection signal="pressed" from="Story Screen/Narration Dialog/MarginContainer/VBoxContainer/Advance Button" to="Story Screen/Narration Dialog" method="_on_advance_button_pressed"]
[connection signal="SELECTED" from="Story Screen/Choices Dialog" to="Story Screen" method="_on_choice_selected"]
